objects/Support_Services_Asset__c.object
<CustomObject>
    <description>Created for the Australian team to track information about the assets they are pursuing.  Allows them to relate multiple assets to an opportunity</description>
    <fields>
        <fullName>Capacity_MW__c</fullName>
        <label>Capacity (MW)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incumbent_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent AM</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Services Assets (Incumbent AM)</relationshipLabel>
        <relationshipName>Support_Services_Assets_IncumbentAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Original Equipment Manufacturer</inlineHelpText>
        <label>OEM</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Services Assets</relationshipLabel>
        <relationshipName>SS_Assets_OEM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPA Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Services Assets (PPA Owner)</relationshipLabel>
        <relationshipName>Support_Services_Assets_PPA_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Classification__c</fullName>
        <label>Project Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Services Assets (Project Developer)</relationshipLabel>
        <relationshipName>Support_Services_Assets_Project_Develope</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Created for the Australian states, but the name allows for fields from additional countries if the object is incorporated elsewhere.</description>
        <label>State/ Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>New South Wales</fullName>
                </value>
                <value>
                    <fullName>Queensland</fullName>
                </value>
                <value>
                    <fullName>South Australia</fullName>
                </value>
                <value>
                    <fullName>Tasmania</fullName>
                </value>
                <value>
                    <fullName>Victoria</fullName>
                </value>
                <value>
                    <fullName>Western Australia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <label>Technology Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Wind - Onshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Support Services Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Services Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>